Turusを使用した負荷テストデモのブログ記事を追加

--- a/Blazemeter/stress-test-demo-with-taurus/src/index.html
+++ b/Blazemeter/stress-test-demo-with-taurus/src/index.html
@@ -12,6 +12,6 @@
 
 <script>
     document.getElementById("login").onclick = function(){
-        location.href = ''
+        location.href = "login.html"
     }
 </script>
