--- a/Blazemeter/stress-test-demo-with-taurus/src/mypage.html
+++ b/Blazemeter/stress-test-demo-with-taurus/src/mypage.html
@@ -5,8 +5,8 @@
         <title>Mypage</title>
     </head>
     <body>
-        <p>ログインに成功しました。</p>
-        <input type=button id="logout" value="Logout">
+        <p>Success to login!</p>
+        <input type="button" id="logout" value="Logout">
     </body>
 </html>
 <script>
